--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: space-around;
     background: #1F2937;
-    padding: 8px;
+    padding: 12px;
 }
 
 .links {
@@ -30,4 +30,71 @@ a {
     font-size: 18px;
     color: #E5E7EB;
     text-decoration: none;
+}
+
+.hero-container {
+    display: flex;
+    justify-content: space-around;
+    padding: 100px;
+    background: #1F2937;
+}
+
+.hero-title {
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+}
+
+.hero-text {
+    color: #F9FAF8;
+}
+
+button {
+    border-radius: 8px;
+    background: #3882F6;
+    color: white;
+    padding: 4px 16px;
+    width: 100px;
+    border: 0;
+}
+
+.hero {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 350px;
+    gap:10px;
+}
+.section {
+    height: 600px;
+}
+
+.section-title {
+   font-size: 36px;
+   color: #1F2937;
+   font-weight: 900;
+   text-align: center;
+   padding-top: 40px; 
+   padding-bottom: 40px;
+}
+
+.image {
+    border: 2px solid blue;
+    border-radius: 8px;
+    width: 150px;
+    height: 150px;
+}
+
+.illustrations {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px;
+    gap: 60px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100px;
+    gap: 5px;
 }
